--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "lucide-react": "0.475.0",
     "recharts": "3.6.0",
     "@google/genai": "1.36.0",
-    "firebase": "^12.8.0"
+    "firebase": "^12.8.0",
+    "@vitejs/plugin-react": "^5.1.2",
+    "path": "^0.12.7",
+    "vite": "^7.3.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
