--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "firebase": "^12.8.0",
     "@vitejs/plugin-react": "^5.1.2",
     "path": "^0.12.7",
-    "vite": "^7.3.1"
+    "vite": "^7.3.1",
+    "url": "^0.11.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
