--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
+    "@google/genai": "^1.37.0",
+    "url": "^0.11.4",
     "react-dom": "^19.2.3",
-    "lucide-react": "0.475.0",
-    "recharts": "3.6.0",
-    "@google/genai": "1.36.0",
     "firebase": "^12.8.0",
-    "@vitejs/plugin-react": "^5.1.2",
+    "lucide-react": "^0.562.0",
     "path": "^0.12.7",
+    "@vitejs/plugin-react": "^5.1.2",
     "vite": "^7.3.1",
-    "url": "^0.11.4"
+    "react": "^19.2.3",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
