--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "path": "^0.12.7",
     "url": "^0.11.4",
     "vite": "^7.3.1",
-    "@vitejs/plugin-react": "^5.1.2"
+    "@vitejs/plugin-react": "^5.1.2",
+    "html2canvas": "1.4.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
